--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.2.1",
+    "react-transition-group": "^2.7.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
