--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/g6": "^3.0.1",
     "@babel/core": "7.1.6",
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@fortawesome/fontawesome": "^1.1.8",
